# musat

./: .gitignore  CMakeLists.txt  README.md  that.cnf
apps/: main.cpp
include/: solver.hpp
src/: solver.cpp
test/: test_solver.cpp
